misc changes